test/syc/good/preinc.c
/*
 * Preincrement
 */

char a;
int b;
long c;
long long d;

void preinc_char(void)
{
	++a;
}

int preinc(void)
{
	++b;
}

void preinc_long(void)
{
	++c;
}

void preinc_longlong(void)
{
	++d;
}
